[metadata]
name = aiidalab_mfa_cscs
version = v2023.1003
description = Enable multi-factor authentication for CSCS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-mfa-cscs
author = The AiiDAlab Team
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-mfa-cscs/main/img/logo.png
    Documentation = https://github.com/aiidalab/aiidalab-mfa-cscs/#readme
    Bug Tracker = https://github.com/aiidalab/aiidalab-mfa-cscs/issues

[options]
packages = find:
install_requires =
    aiidalab>=21.09.0
    humanize
    ipywidgets
python_requires = >=3.8

[options.extras_require]
dev =
    bumpver~=2023.1124
    pre-commit~=2.20

[aiidalab]
title = MFA for CSCS
description = Enable multi-factor authentication for CSCS accounts
categories =
    setup

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v2023.1003"
version_pattern = "vYYYY.BUILD[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
start.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {version}
